--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,9 @@
     
     <uses-sdk android:minSdkVersion="11"
               android:targetSdkVersion="18" />
+    
+    <uses-feature android:name="android.hardware.camera.flash"
+  				  android:required="true" />
 
     <application android:allowBackup="true"
                  android:icon="@drawable/ic_launcher"
